2018-04-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (ReadOneJNGImage): The embedded JPEG image is
	required to have the same dimensions as the JNG image as provided
	by JHDR.  Fixes SourceForge bug 555 "heap-buffer-overflow in
	AcquireCacheNexus when processing jng file".  It is likely that
	this issue is precipitated by using 'montage' which seems to set a
	default non-zero image size.
	(ReadMNGImage): By default limit the maximum loops specifiable by
	the MNG LOOP chunk to 512 loops, but allow this to be modified by
	'-define mng:maximum-loops=value'.  Also assure that the value is
	in the range of 0-2147483647 as per the MNG specification.  This
	is to address the denial of service issue described by
	CVE-2018-10177.  This problem was reported to us by Petr Gajdos
	via email on Fri, 20 Apr 2018.

	* coders/dpx.c (ReadDPXImage): Move misplaced channel validation
	code.  Fixes oss-fuzz 8041 "graphicsmagick/coder_DPX_fuzzer:
	Use-of-uninitialized-value in WriteDPXImage" and oss-fuzz 8055
	"graphicsmagick/enhance_fuzzer: Use-of-uninitialized-value in
	EnhanceImage". (Credit to OSS-Fuzz)

2018-04-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xpm.c (StringToListMod): Algorithm fixes to fix use of
	uninitialized data.  Fixes oss-fuzz 8046
	"graphicsmagick/coder_XPM_fuzzer: Use-of-uninitialized-value in
	StringToListMod". (Credit to OSS-Fuzz)

2018-04-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xpm.c (ReadXPMImage): Reduce memory consumption further.
	Hopefully fixes oss-fuzz 8013 "graphicsmagick/coder_XPM_fuzzer:
	Out-of-memory in graphicsmagick_coder_XPM_fuzzer". (Credit to
	OSS-Fuzz)

	* magick/utility.c (StringToList): Only allocate the memory
	required when converting string to an ASCII list.  May or may not
	fix oss-fuzz 8013 "graphicsmagick/coder_XPM_fuzzer: Out-of-memory
	in graphicsmagick_coder_XPM_fuzzer". (Credit to OSS-Fuzz)

2018-04-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
